--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -3,15 +3,12 @@
 # --------------------------------------
 
 menu:
-  # Home: / || fas fa-home
-  # Archives: /archives/ || fas fa-archive
-  # Tags: /tags/ || fas fa-tags
-  # Categories: /categories/ || fas fa-folder-open
-  # List||fas fa-list:
-  #   Music: /music/ || fas fa-music
-  #   Movie: /movies/ || fas fa-video
-  # Link: /link/ || fas fa-link
-  # About: /about/ || fas fa-heart
+  Home: / || fas fa-home
+  Archives: /archives/ || fas fa-archive
+  Tags: /tags/ || fas fa-tags
+  Categories: /categories/ || fas fa-folder-open
+  Link: /link/ || fas fa-link
+  About: /about/ || fas fa-heart
 
 nav:
   logo: # image
@@ -672,11 +669,12 @@ aside:
     description:
     button:
       enable: true
+      icon: fab fa-bilibili
       text: 关注我
       link: https://space.bilibili.com/526482389
   card_announcement:
     enable: true
-    content: This is my Blog
+    content: ApartTUSITU开了不知道多少遍的博客！\n官网www.tusitu123.top！
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
