--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -3,12 +3,12 @@
 # --------------------------------------
 
 menu:
-  Home: / || fas fa-home
-  Archives: /archives/ || fas fa-archive
-  Tags: /tags/ || fas fa-tags
-  Categories: /categories/ || fas fa-folder-open
-  Link: /link/ || fas fa-link
-  About: /about/ || fas fa-heart
+  主页: / || fas fa-home
+  归档: /archives/ || fas fa-archive
+  标签: /tags/ || fas fa-tags
+  分类: /categories/ || fas fa-folder-open
+  友链: /link/ || fas fa-link
+  关于我: /about/ || fas fa-heart
 
 nav:
   logo: # image
@@ -37,6 +37,9 @@ copy:
 # formal:
 #   icon: link || the description
 social:
+  fab fa-qq: tencent://message/?uin=3412969657&Site=&Menu=yes
+  fab fa-weixin: https://s2.loli.net/2023/04/11/Q42aKhuzrjdJPoy.jpg
+  fab fa-bilibili: https://space.bilibili.com/526482389
   fab fa-github: https://github.com/ApartTUSITU || Github
   fas fa-envelope: mailto:tusitu123@outlook.com || Email
 
@@ -625,7 +628,7 @@ hr_icon:
 
 # the subtitle on homepage (主頁subtitle)
 subtitle:
-  enable: false
+  enable: true
   # Typewriter Effect (打字效果)
   effect: true
   # Customize typed.js (配置typed.js)
@@ -637,7 +640,7 @@ subtitle:
   # source: 2  調用一句網（簡體） https://yijuzhan.com/
   # source: 3  調用今日詩詞（簡體） https://www.jinrishici.com/
   # subtitle 會先顯示 source , 再顯示 sub 的內容
-  source: false
+  source: 1
   # 如果關閉打字效果，subtitle 只會顯示 sub 的第一行文字
   sub:
 
@@ -674,7 +677,7 @@ aside:
       link: https://space.bilibili.com/526482389
   card_announcement:
     enable: true
-    content: ApartTUSITU开了不知道多少遍的博客！\n官网www.tusitu123.top！
+    content: ApartTUSITU开了不知道多少遍的博客！官网www.tusitu123.top！
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
