--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -327,7 +327,7 @@ valine:
 # waline - A simple comment system with backend support fork from Valine
 # https://waline.js.org/
 waline:
-  serverURL: # Waline server address url
+  serverURL: 'https://waline.tusitu123.top'
   bg: # waline background
   pageview: false
   option:
