--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -5,3 +5,7 @@
       link: https://www.lengshanyun.top
       avatar: https://www.lengshanyun.top/logo.png
       descr: 朋友冷山のBlog！
+    - name: CJYKK博客
+      link: https://blog.cjykk.top
+      avatar: http://d.pdxkk.xyz:5213/api/v3/file/get/7641/icon2.jpg?sign=b3Jo7ZC8sGwDNE5kd4__50zbT4DtP_OO8TEa_1YQVHc%3D%3A0
+      descr: 朋友CJYKKのBlog！
