--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -329,7 +329,7 @@ valine:
 # waline - A simple comment system with backend support fork from Valine
 # https://waline.js.org/
 waline:
-  serverURL: 'https://waline.tusitu123.top'
+  serverURL: 'https://waline.aptusitu.link'
   bg: # waline background
   pageview: false
   option:
